# ruboto

./: .gitignore  .shellhook  darwin.nix  linux.nix  shell  shell.nix
dev/: Cargo.toml  main
dev/src/: bench.rs  heartbeat.rs  main.rs  terminal.rs  test.rs
dev/src/receive/: bench.rs  mod.rs  parse.rs  sanitize.rs  test.rs  token.rs
dev/src/respond/: mod.rs  parse.rs  test.rs  token.rs
